finish styling user show page again, fixing alignment and grey lines

--- a/app/assets/stylesheets/components/_style_fonts.scss
+++ b/app/assets/stylesheets/components/_style_fonts.scss
@@ -52,3 +52,7 @@ color: $dark-gray;
 .horizontal-grey:not(:first-child) {
   border-top: 1px solid $medium-gray;
 }
+
+.vertical-grey:not(:first-child) {
+  border-left: 1px solid $medium-gray;
+}
